# paper-servant

./: .env  README.md  main.py  playground.py  pyproject.toml  start_services.sh
agent-ui-frontend/: package-lock.json  package.json
agent-ui-frontend/src/components/ui/typography/MarkdownRenderer/: MarkdownRenderer.tsx
agents/: knowledge_agent.py  organizer_agent.py  paper_fetcher.py  qa_agent.py  reader_agent.py  router_agent.py
templates/: paper_note.md
tools/: citation_tools.py  file_tools.py  metadata_tools.py  paper_tools.py  pdf_tools.py  system_tools.py  wiki_tools.py
